[project]
name = "gym"
version = "0.1.0"
description = ""
authors = [
    {name = "wstzeng",email = "wst991002@gapp.nthu.edu.tw"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "gymnasium[box2d] (>=1.1.1,<2.0.0)",
    "numpy (==1.26.4)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "agent" },
    { include = "policy" },
]
