[project]
name = "gym"
version = "0.1.0"
description = ""
authors = [
    {name = "wstzeng",email = "wst991002@gapp.nthu.edu.tw"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "gymnasium[box2d] (>=1.1.1,<2.0.0)",
    "numpy (==1.26.4)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "setuptools (>=65.0.0,<70.0.0)",
    "rich (>=14.2.0,<15.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "agents" },
    { include = "policy" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
black = "^24.3"
ruff = "^0.4"

[tool.poetry.scripts]
train = "utils.train:main"
test = "utils.test:main"
